[project]
name = "grad-pylib"
description = "Internal core helpers and wrappers for FastAPI backends"
authors = [
    { name = "Mikael Arvola", email = "marvel@illinois.edu" },
]
license-files = [
    "LICENSE", "NOTICE"
]
dynamic = [
    "version"
]
dependencies = [
    "fastapi~=0.138.0",
    "uvicorn[standard]~=0.49.0",
    "sqlalchemy~=2.0.50",
    "fastapi-azure-auth~=5.2.0",
    "pydantic-settings~=2.14.1",
    "pyodbc>=5.3.0",
    "httptools>=0.8.0",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
]
requires-python = ">=3.14,<3.15"
readme = "README.md"

[project.scripts]
migrate = "grad_pylib.tools.migrate:main"
openapi = "grad_pylib.tools.export_openapi:main"
generate-models = "grad_pylib.tools.generate_models:main"
rebuild-models = "grad_pylib.tools.rebuild_models:main"

[project.urls]
Source = "https://github.com/graduatecollege/grad-pylib"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/grad_pylib"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Instead of tag_filter/tag_regex variables, explicitly tell Git how to search tags:
git_describe_command = "git describe --dirty --tags --long --match 'v*'"

[dependency-groups]
test = [
    "pytest~=9.1.1",
    "pytest-xdist~=3.8.0",
    "httpx2>=2.3.0",
    "testcontainers[mssql]~=4.14.2",
    "pymssql~=2.3.13",
    "pytest-cov>=7.1.0"
]
dev = [
    "sqlacodegen~=4.0.3",
    "testcontainers[mssql]~=4.14.2",
    "pymssql~=2.3.13",
    "ty>=0.0.44",
    "ruff>=0.15.16"
]

[tool.ruff.lint]
select = [
    "FAST",
    "ANN001",
    "ANN002",
    "ASYNC",
    "SIM",
    "UP"
]
